--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@
 site_name: Degauss
 site_url: https://degauss.com.au/
 site_author: Tony Kambourakis
+
 theme:
   name: 'material'
   palette:
@@ -15,6 +16,7 @@ theme:
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
+  favicon: favicon.ico
 
 
 
